@@ -21,6 +21,33 @@
 __author__ = """Hans-Peter Locher <hans-peter.locher@inquant.de>"""
 __docformat__ = 'plaintext'
 
+import urllib
+import urllib2
+
+import logging
+
+LOGGER="silverpop"
+
+
+def info(msg):
+    logging.getLogger(LOGGER).info(msg)
+
+
+def submit_to_silverpop(request):
+    """submit a request to silverpop"""
+    handle = urllib2.urlopen(request)
+    response = handle.read()
+    info('Silverpop API response: %s' % response)
+    result = response.lower()
+    if '<success>true</success>' in result:
+        return True
+    elif '<success>success</success>' in result:
+        return True
+    elif '<success>false</success>' in result:
+        return False
+    else:
+        return False
+
 
 def add_recipient(api_url, list_id, email, columns=[]):
     """Add recipient to a list (only email key supported)
@@ -29,8 +56,38 @@ def add_recipient(api_url, list_id, email, columns=[]):
        [{'column_name':'State', 'column_value':'Germany'},]
        returns True or False
     """
+    parts = []
+    parts.append("""<Envelope>
+  <Body>
+    <AddRecipient>
+      <LIST_ID>%s</LIST_ID>
+      <CREATED_FROM>2</CREATED_FROM>
+      <UPDATE_IF_FOUND>true</UPDATE_IF_FOUND>
+      <COLUMN>
+        <NAME>EMAIL</NAME>
+        <VALUE>%s</VALUE>
+      </COLUMN>""" % (list_id, email)
+          )
 
-    return True
+    for column in columns:
+        parts.append("""
+      <COLUMN>
+        <NAME>%s</NAME>
+        <VALUE>%s</VALUE>
+      </COLUMN>""" % (column['column_name'], column['column_value'])
+              )
+
+    parts.append("""
+    </AddRecipient>
+  </Body>
+</Envelope>"""
+        )
+    xml = "".join(parts)
+    info('xml: %s' % xml)
+    headers = {'Content-Type': 'application/x-www-form-urlencoded;charset=UTF-8'}
+    xml = urllib.urlencode({'xml': xml})
+    req = urllib2.Request(api_url, xml, headers)
+    return submit_to_silverpop(req)
 
 
 def is_opted_in(api_url, list_id, email):
@@ -47,8 +104,19 @@ def opt_out_recipient(api_url, list_id, email):
        api_url, list_id, email are required
        returns True or False
     """
-
-    return True
+    xml = """<Envelope>
+  <Body>
+    <OptOutRecipient>
+      <LIST_ID>%s</LIST_ID>
+      <EMAIL>%s</EMAIL>
+    </OptOutRecipient>
+  </Body>
+</Envelope>""" % (list_id, email)
+    info('xml: %s' % xml)
+    headers = {'Content-Type': 'application/x-www-form-urlencoded;charset=UTF-8'}
+    xml = urllib.urlencode({'xml': xml})
+    req = urllib2.Request(api_url, xml, headers)
+    return submit_to_silverpop(req)
 
 
 def select_recipient_data(api_url, list_id, email, columns=[]):
