@@ -1,3 +1,13 @@
+2009-05-11  Hans-Peter Locher <hans-peter.locher@inquant.de>
+
+    * api.py (add_recipient): 
+		implement method (taken from collective.pfg.silverpop 0.5)
+    * api.py (opt_out_recipient): 
+		implement method (taken from collective.pfg.silverpop 0.5)
+    * api.py (submit_to_silverpop): 
+		helper method for sending the request, 
+		interprets the silverpop response and returns True/False
+
 2009-05-08  Hans-Peter Locher <hans-peter.locher@inquant.de>
 
     * api.py (select_recipient_data): 
